Configurado o ASP.NET Identity utilizando o DynamoDB

--- a/Ilevus/index.html
+++ b/Ilevus/index.html
@@ -17,7 +17,7 @@
 
     <script type="text/javascript">
     	var apiPath = "api/";
-        var urlBase = location.origin+location.pathname;
+        var urlBase = location.origin+"/";
         var BACKEND_URL = urlBase+apiPath;
     </script>
     <script type="text/javascript" src="app.js" charset="utf-8"></script>
