Revisando as mensagens e incluindo as outras culturas no código.

--- a/Ilevus/index.html
+++ b/Ilevus/index.html
@@ -20,7 +20,7 @@
         var urlBase = location.origin+"/";
         var BACKEND_URL = urlBase+apiPath;
     </script>
-    <script type="text/javascript" src="app.js" charset="utf-8"></script>
+    <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 
     <script type="text/javascript">
 	  WebFontConfig = {
