--- a/Ilevus/index.html
+++ b/Ilevus/index.html
@@ -24,6 +24,17 @@
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 
     <script type="text/javascript">
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) { return; }
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "//connect.facebook.net/pt_BR/sdk.js";
+            js.async = true;
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk')); var auth2 = {};
+    </script>
+      <script type="text/javascript">
 	    WebFontConfig = {
 	        google: {
 	            families: [
@@ -40,7 +51,8 @@
 	    var s = document.getElementsByTagName('script')[0];
 	    s.parentNode.insertBefore(wf, s);
 	    })();
-
+    </script>
+    <script type="text/javascript">
 
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -48,8 +60,7 @@
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
         ga('create', 'UA-80430405-1', 'auto');
-        ga('send', 'pageview');
 
-  	</script>
+</script>
   </body>
 </html>
