--- a/Ilevus/index.html
+++ b/Ilevus/index.html
@@ -21,6 +21,7 @@
         var urlBase = location.origin+"/";
         var BACKEND_URL = urlBase+apiPath;
     </script>
+    <script type="text/javascript" src="https://s3.amazonaws.com/assets-sandbox.moip.com.br/assinaturas/moip-assinaturas.min.js"></script>
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 
     <script type="text/javascript">
