Remodelagem do rodapé do site para as três linguagens que o sistema trabalha; Inclusão do Font Awesome para utilização dos icones.

--- a/Ilevus/index.html
+++ b/Ilevus/index.html
@@ -21,6 +21,12 @@
           webshims.setOptions('forms-ext', {types: 'date'});
         webshims.polyfill('forms forms-ext');
       </script>
+      <style>
+          .footer-bottom, .ilv-lp-footer {
+              background: #20232c !important;
+              font-size: 12px !important;
+          }
+      </style>
 
   </head>
   <body>
