--- a/Ilevus/index.html
+++ b/Ilevus/index.html
@@ -6,8 +6,9 @@
 		<title>ilevus</title>
 		<meta name="description" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon shortcut" type="image/x-icon" href="favicon.ico" />
+		<link rel="icon shortcut" type="image/x-icon" href="favicon.ico" />      
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://unpkg.com/react-select/dist/react-select.css">
 
 
 
@@ -70,6 +71,10 @@
         var BACKEND_URL = urlBase+apiPath;
     </script>
     <script type="text/javascript" src="https://s3.amazonaws.com/assets-sandbox.moip.com.br/assinaturas/moip-assinaturas.min.js"></script>    
+      <script src="https://unpkg.com/classnames/index.js"></script>
+      <script src="https://unpkg.com/react-input-autosize/dist/react-input-autosize.js"></script>
+      <script src="https://unpkg.com/react-select/dist/react-select.js"></script>
+      
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 
     <script type="text/javascript">
