--- a/Ilevus/index.html
+++ b/Ilevus/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<title>ilevus</title>
-		<meta name="description" content="" />
+		<title>Ilevus</title>		
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon shortcut" type="image/x-icon" href="favicon.ico" />      
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
