--- a/Ilevus/index.html
+++ b/Ilevus/index.html
@@ -72,8 +72,8 @@
     </script>
     <script type="text/javascript" src="https://s3.amazonaws.com/assets-sandbox.moip.com.br/assinaturas/moip-assinaturas.min.js"></script>    
       <script src="https://unpkg.com/classnames/index.js"></script>
-      <script src="https://unpkg.com/react-input-autosize/dist/react-input-autosize.js"></script>
-      <script src="https://unpkg.com/react-select/dist/react-select.js"></script>
+      <!--<script src="https://unpkg.com/react-input-autosize/dist/react-input-autosize.js"></script>
+      <script src="https://unpkg.com/react-select/dist/react-select.js"></script>-->
       
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 
