--- a/Ilevus/frontend/index.html
+++ b/Ilevus/frontend/index.html
@@ -69,7 +69,7 @@
 
     <script type="text/javascript">
         var apiPath = "api/";
-        var urlBase = "http://192.168.100.3/ilevus/";
+        var urlBase = "http://localhost:57141/";
         //var old_urlBase = location.origin + "/";
         var BACKEND_URL = urlBase + apiPath;
     </script>
